@@ -327,6 +327,6 @@ env.Install("$install_to/lib/madman/plugins", plugin_list)
 env.Alias("install", "$install_to/bin")
 env.Alias("install", "$install_to/lib/madman/plugins")
 
-for dir in ["expat", "utility", "database", "httpd", "designer",
+for dir in ["expat", "utility", "database", "httpd", "designer/images", "designer",
             "ui", "main"]:
   SConscript("%s/SConscript" % dir, build_dir = "%s/%s" % (builddir_name, dir), duplicate = 0)
